# FaceTrack

./: InterfazCandide.pro  MatToQImage.cpp  PointState.cpp  PointState.h  README.md  candide3_rodri.wfm  candide3_v3.wfm  facetracking.h  facetracking2.cpp  facetracking2.h  facialmesh.cpp  facialmesh.h  icono.psd  juli.shape  keyframeselection.cpp  keyframeselection.ui  logfile.cpp  logfile.h  mainwindow.ui  modelfitting.ui  onlymesh.ui  resources.qrc  trackingvideo.cpp  trackingvideo.h
Installers/: readme.txt
Source_code/: .gitignore  CMakeLists.txt  build.sh  candide3_pfi.wfm  facetracking.cpp  facialmesh.cpp  facialmesh.h  facu.shape  keyframeselection.cpp  keyframeselection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelfitting.cpp  modelfitting.h  modelfitting.ui  onlymesh.cpp  onlymesh.h  onlymesh.ui  results.cpp  results.h  results.ui  run.sh  trackingvideo.cpp  trackingvideo.h  trackingvideo.ui
Source_code/candide-fit/: .gitignore
Source_code/candide-fit/src/: detect_landmarks.py  draw_candide.py  fit_candide.py
Source_code/candide-fit/src/resources/: candide3.wfm  correspondences.txt
Source_code/candide-fit/src/utils/: candidelib.py  facemarks.py  imutils.py
Source_code/resources/: CMakeLists.txt  resources.qrc
Source_code/utils/: CMakeLists.txt  MatToQImage.cpp  MatToQImage.h
Video_examples/: FaceTrack_example_1.shape  FaceTrack_example_1_readme.txt  FaceTrack_example_2.shape  FaceTrack_example_2_readme.txt
